AG-8094 - Fix example runner double scroll bar issue

--- a/grid-packages/ag-grid-docs/documentation/src/components/example-runner/ExampleRunnerResult.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/components/example-runner/ExampleRunnerResult.module.scss
@@ -1,4 +1,5 @@
 .exampleRunnerResult {
+    display: block;
     width: 100%;
     height: 100%;
     border: 0;
